[ci skip] fix + wrong plot e080b3b2b4c9acbbf5c136aeb7627f64eefeaf94

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dcd27ef0",
+   "id": "39da1230",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a579476",
+   "id": "2476982f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1614d4f",
+   "id": "e3c63f03",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba31907",
+   "id": "c0799282",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "939bb87a",
+   "id": "a22a431b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab56a8ca",
+   "id": "f4976427",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116cd24d",
+   "id": "271ce535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f631a63",
+   "id": "106fcdb2",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82d2886",
+   "id": "326f2f0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6dc969",
+   "id": "f69e8091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39e7167",
+   "id": "6a4b4eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c6c13c1",
+   "id": "a3f49a4e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9346ee66",
+   "id": "80a0150c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0157a58",
+   "id": "1874e77f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67e17ad",
+   "id": "5206f4cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e4632a",
+   "id": "a1291649",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117cd54f",
+   "id": "b8b8eeca",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f608b4f9",
+   "id": "e3766393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25135597",
+   "id": "4453c827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22be19cd",
+   "id": "6eeb4c85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca93008e",
+   "id": "abb88fb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f5d2a5a",
+   "id": "175b3b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679af223",
+   "id": "49284619",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62226a03",
+   "id": "b8d42031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "984f1051",
+   "id": "ee872d8e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f4e1fb",
+   "id": "4f11aa86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2033b31a",
+   "id": "f8dcaa44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e2cd637",
+   "id": "5e20781c",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d422748b",
+   "id": "4e6cb217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bda24843",
+   "id": "3a9ad1bf",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc21f341",
+   "id": "d2241e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d2f18a",
+   "id": "6932ecde",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21398c5d",
+   "id": "bc6da22f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08798df4",
+   "id": "2cd88100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e741ae",
+   "id": "9b7817d1",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930eefc2",
+   "id": "79e48e75",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c51739",
+   "id": "a188674e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3fcd01d",
+   "id": "ce38a346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572439b8",
+   "id": "925492dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dfe0cbb",
+   "id": "43ba0d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ff3154e",
+   "id": "81de7403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a68e8660",
+   "id": "65baa08f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336dce7c",
+   "id": "6fa902b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c3d3bee",
+   "id": "effaafa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3613146",
+   "id": "c1bad770",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70cfb740",
+   "id": "f71552ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d749db",
+   "id": "c9e8d8f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57eb9f70",
+   "id": "407b7a6f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0729b01",
+   "id": "a3ff5199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa297d4",
+   "id": "33a37034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eba6707",
+   "id": "d5510b32",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea28f0d7",
+   "id": "03df3dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,17 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ec9a9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = targets.skb.drop(cols=[\"load_mw\"]).skb.mark_as_y()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccf12ae7",
+   "id": "de5ada0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,17 +997,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66710dd4",
+   "id": "c0ce0054",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = features.skb.apply(model, y=targets)"
+    "predictions = features.skb.apply(\n",
+    "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
+    ").skb.set_name(\"model\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc77bb5",
+   "id": "0cbb566a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1045,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49c4e9f",
+   "id": "ae4247e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learner = predictions.skb.get_pipeline(fitted=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d4a6911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sklearn_learner = learner.find_fitted_estimator(\"model\")\n",
+    "sklearn_learner.estimators_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "614772a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
+    "predicted_target_column_names = [\n",
+    "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
+    "]\n",
+    "\n",
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            targets.skb.eval(),\n",
+    "            predictions.rename(\n",
+    "                {\n",
+    "                    target_name: predicted_name\n",
+    "                    for target_name, predicted_name in zip(\n",
+    "                        target_column_names, predicted_target_column_names\n",
+    "                    )\n",
+    "                }\n",
+    "            ).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(24 * 7)\n",
+    ").transform_fold(\n",
+    "    [\"load_mw\"] + predicted_target_column_names,\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0d1c57",
    "metadata": {},
    "outputs": [],
    "source": []
