--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05a500b6",
+   "id": "fd9ddcfc",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4796d00",
+   "id": "16865bd8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1847e44",
+   "id": "5ad5c3d8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee018c5b",
+   "id": "f61f7378",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9df63d3",
+   "id": "1444754a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aef113e5",
+   "id": "ad6c36b8",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e359fd",
+   "id": "87a30085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b0e829",
+   "id": "ed151c7a",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa36440",
+   "id": "42725124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf5bef7",
+   "id": "7f4624d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f39e4a7",
+   "id": "433bd124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed0b26d",
+   "id": "e62abde2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1fb031",
+   "id": "5eb04df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "180ddd39",
+   "id": "97487ee4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81d61d5b",
+   "id": "e62a4a49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63920538",
+   "id": "c3eb0f50",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2673436",
+   "id": "661d2609",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52df8447",
+   "id": "3e3bc9db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2669c4d7",
+   "id": "cd54b77c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36abf8d",
+   "id": "0b13be7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffcfab0a",
+   "id": "69ac1c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6852797d",
+   "id": "5672975a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb13980c",
+   "id": "70297566",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0fa99e3",
+   "id": "4800a248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7095e56b",
+   "id": "d0220795",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6640556",
+   "id": "b5fddde1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c4bd650",
+   "id": "2d230dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4bca9a",
+   "id": "7a0be50d",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a8fc69",
+   "id": "3dfe6b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d033250d",
+   "id": "1637b0b5",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d54e0543",
+   "id": "50d39934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7919e66",
+   "id": "d2f43f9d",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5818637",
+   "id": "838db7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae0f110",
+   "id": "30c8d864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab86f29",
+   "id": "1c062b8c",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8fc337",
+   "id": "3bd0a18f",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1445b68",
+   "id": "212494bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c010b89",
+   "id": "db0f67ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4005576c",
+   "id": "d08d10df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ea8c51",
+   "id": "9a47db6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0970740d",
+   "id": "b3254096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e17d34",
+   "id": "e4eec18b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde11d6f",
+   "id": "920f7e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934808d5",
+   "id": "bf75e0b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfe177e",
+   "id": "2c2aff34",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d887f7",
+   "id": "4dce04d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a70d05",
+   "id": "0d097983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f3f8c8",
+   "id": "50057900",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09f523f",
+   "id": "b0a1bca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cdd498f",
+   "id": "166e58a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d99280e",
+   "id": "a9dcb55d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febb1610",
+   "id": "4c94ebc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,17 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83aa38a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = targets.skb.drop(cols=[\"load_mw\"]).skb.mark_as_y()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9e7fd6a",
+   "id": "d5a51085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,17 +997,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693de54b",
+   "id": "3a81236c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = features.skb.apply(model, y=targets)"
+    "predictions = features.skb.apply(\n",
+    "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
+    ").skb.set_name(\"model\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f6567f",
+   "id": "90c3dc52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1045,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c5dac6",
+   "id": "31d3c523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learner = predictions.skb.get_pipeline(fitted=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46347a80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sklearn_learner = learner.find_fitted_estimator(\"model\")\n",
+    "sklearn_learner.estimators_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2187e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
+    "predicted_target_column_names = [\n",
+    "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
+    "]\n",
+    "\n",
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            targets.skb.eval(),\n",
+    "            predictions.rename(\n",
+    "                {\n",
+    "                    target_name: predicted_name\n",
+    "                    for target_name, predicted_name in zip(\n",
+    "                        target_column_names, predicted_target_column_names\n",
+    "                    )\n",
+    "                }\n",
+    "            ).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(24 * 7)\n",
+    ").transform_fold(\n",
+    "    [\"load_mw\"] + predicted_target_column_names,\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fb55c7",
    "metadata": {},
    "outputs": [],
    "source": []
